@@ -3,7 +3,7 @@ body.portaltype-plone-site, body.portaltype-ftw-subsite-subsite {
     @extend .hiddenStructure;
   }
 
-  #breadcrumbs-wrapper {
+  #breadcrumbs-wrapper, #portal-breadcrumbs {
     @extend .hiddenStructure;
   }
 }
