@@ -5,6 +5,11 @@ Changelog
 1.0.0a5 (unreleased)
 --------------------
 
+- Introduce theming variable to configure pathbar location.
+  It is possible to set the `pathbar_full_width` theme parameter in the FTI.
+  When `pathbar_full_width` is set to `python: True` the pathbar is displayed full width.
+  When `pathbar_full_width` is set to `python: False` the pathbar in the content at the top.
+
 - Decrease upper and lower padding of logoRow.
   [elioschmutz]
 
